--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
         run: npm run format:check
 
       - name: Run ESLint
-        run: npm run lint
+        run: npm run lint -- --max-warnings=0
