--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,3 +23,14 @@ jobs:
 
       - name: Build app
         run: npm run build
+        
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          project_id: notely-487519
+
+      - name: Build & Push Docker Image
+        run: |
+          gcloud builds submit \
+            --tag us-central1-docker.pkg.dev/notely-487519/notely-ar-repo/notely:latest .
