--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,10 @@ jobs:
           version: 'latest'
           project_id: notely-487519
           service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-
+          
+      - name: Authenticate Docker to GCP
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev
+        
       - name: Set active project
         run: gcloud config set project notely-487519
 
