--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,19 +27,16 @@ jobs:
       - name: Build app
         run: npm run build
 
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v1
         with:
           version: 'latest'
           project_id: notely-487519
-
-      # Fix: preserve JSON formatting properly
-      - name: Write GCP service account key
-        run: |
-          printf '%s' "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp-key.json
-
-      - name: Activate service account
-        run: gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
 
       - name: Configure Docker to use GCP
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
