--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -45,6 +48,9 @@ jobs:
         run: |
           gcloud builds submit \
             --tag us-central1-docker.pkg.dev/notely-487519/notely-ar-repo/notely:latest .
+
+      - name: Run Database Migrations
+        run: npm run db:migrate
 
       - name: Deploy to Cloud Run
         run: |
